--- a/500.html
+++ b/500.html
@@ -73,7 +73,7 @@
 <!-- Footer -->
 <div class="container-fluid footer">
 	<div class="container">
-       Web Developer - Per Olsen Denmark
+       Web Developer - Per Olsen - Denmark
 	</div>
   </div>
 </body>
