Adjusted custom html files

--- a/503.html
+++ b/503.html
@@ -53,7 +53,7 @@
     <div class="container">
       <p>
         <br />
-         <a href="https://persteenolsen.com" target="_top">Dont worry, just try again ...</a>
+         <a href="https://umb.persteenolsen.com" target="_top">Dont worry, just try again ...</a>
         <br />
        <p/>
      </div>
