--- a/500.html
+++ b/500.html
@@ -15,7 +15,7 @@
 
    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap"></noscript>
-   <link rel="stylesheet" href="wwwroot/css/main.css" />
+   <link rel="stylesheet" href="/css/main.css" />
 	   
    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script defer src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
