--- a/loading.html
+++ b/loading.html
@@ -15,7 +15,7 @@
   
    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap"></noscript>
-   <link rel="stylesheet" href="wwwroot/css/main.css" />
+   <link rel="stylesheet" href="/css/main.css" />
 	
 
     <!-- Navigation -->
