--- a/500.html
+++ b/500.html
@@ -24,10 +24,10 @@
 
     <script>
       function redirect () {
-         setTimeout(myURL, 3000);
+         setTimeout(myURL, 2000);
          
          //var result = document.getElementById("result");
-         //result.innerHTML = "Dont worry, the page will try to load in 3 seconds ...";
+         //result.innerHTML = "Dont worry, the page will try to load in 2 seconds ...";
       }
 
       function myURL() {
@@ -81,11 +81,9 @@
          <!--<p id = "result"></p>-->
 
          <p><a href="https://umb.persteenolsen.com" target="_top">
-          Just try again if the page did not load ...</a></p>
+          Try again if the page does not load ...</a></p>
 
-        <br />
-       
-     </div>
+        </div>
 </section>    
   
 <!-- Footer -->
