Renamed a menu item

--- a/500.html
+++ b/500.html
@@ -51,7 +51,7 @@
         <!-- Links -->
         <ul class="navbar-nav">
             <li class="nav-item">
-               <a href="/about-this-web-app" class="nav-link" >About this Web App</a>
+               <a href="/about-this-website" class="nav-link" >About this Website</a>
             </li>
         </ul>
          <ul class="navbar-nav">
