--- a/503.html
+++ b/503.html
@@ -29,7 +29,7 @@
 		<ul class="navbar-nav">
 		
 		<li class="nav-item">
-			<a class="nav-link" href="/about-this-web-app">About this web App</a>
+			<a class="nav-link" href="/about-this-website">About this Website</a>
 		</li>
 
 		<li class="nav-item">
